# mlx-playground

./: .gitignore  README.md  instructions.txt  pyproject.toml  test_imagenet64.py
chess_engine/: board.py  game.py  main.py
chesszero/: README.md  evaluate.py  mcts_profile.prof  train.py
chesszero/_legacy/: board.py
chesszero/chess_engine/: README.md  bitboard.py  board.py  game.py  game.txt  main.py
chesszero/config/: model_config.py
chesszero/model/: README.md  mcts.py  network.py  self_play.py  training.py
chesszero/tests/: README.md  test_bitboard.py  test_board.py  test_game.py
chesszero/utils/: board_utils.py  random_player.py
data/: __init__.py  cifar10.py  download_cifar10.py  download_imagenet64.py  imagenet64.py  speech_commands_loader.py
diffusion/: README.md  ddpm_conditional_model.py  ddpm_conditional_train.py  ddpm_model.py  ddpm_train.py  imagenet64_train_example.py  loss.py  model.py  scheduler.py  simple_model.py  simple_train.py  test_overfit.py  train.py  utils.py
diffusion/data/: voc.py
flow_matching/: model.py  train.py
gpt2/: model.py
mnist/: README.md  mnist.py  model.py  train.py
sae/: README.md  main.py  sae.py
state_space/: model.py  train.py
utils/: checkpoints.py
yolo/: README.md  compute_anchors.py  detect.py  loss.py  model.py  simple_inference.py  simple_train.py  train.py  verify.py
yolo/data/: download_voc.py  voc.py
