[project]
name = "mlx-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dataclasses>=0.8",
    "memory-profiler>=0.61.0",
    "mlx>=0.21.1",
    "mlx-lm>=0.20.6",
    "numpy>=2.2.0",
    "opencv-python>=4.10.0.84",
    "pillow>=11.0.0",
    "psutil>=6.1.1",
    "ruff>=0.8.2",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]
